-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.2
-
Android emulator, x86_64, Android 9
-
-
e102b0b02 (dev), 67080864f (6.7), 7b85663d2 (6.6), c8433b47b (tqtc/lts-6.5)
-
2024wk10FOQtforAndroid
On some emulator URL video is loaded but are not rendered to the screen
- tests
-
QTBUG-121435 Examples RTA tests for Qt 6.6.2
-
- Closed
-
| For Gerrit Dashboard: QTBUG-122575 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 547141,4 | FFmpeg: Hardware-accelerated codec validation | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 547385,2 | FFmpeg: Hardware-accelerated codec validation | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 547402,2 | FFmpeg: Hardware-accelerated codec validation | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 548128,2 | FFmpeg: Hardware-accelerated codec validation | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |